# daily_code_and_standard_algorithm

./: .gitignore  README.md  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day21_intervals.cpp  day22.cpp  day22_sentence_builder.cpp  day23.cpp  day23_dijkstra.cpp  day24_locked_binary_tree.cpp  day25_dp_regex.cpp  day26.cpp  day27_brackets.cpp  day28_justify_text.cpp  day29_run_length_encoding.cpp  day2_product.cpp  day3.cpp  day30.cpp  day31.cpp  day32.cpp  day33.cpp  day34.cpp  day35.cpp  day36.cpp  day37.cpp  day38.cpp  day39_game_of_life.cpp  day4.cpp  (+44 more)
algorithm/: bellman_ford.cpp  breadth_first_search.cpp  bucket_sort.cpp  counting_sort.cpp  depth_first_search.cpp  dichotomy.cpp  dijkstra.cpp  hierholzer.cpp  khan.cpp  kmp_pattern_in_string.cpp  merge_sort.cpp  monte-carlo_approximation.cpp  prime_factors.cpp  reservoir_sampling.cpp  thread_pool.cpp  threads.cpp  union_find.cpp
debugging/: segfault.cpp
optimization/: readme.md
optimization/game_of_life/: CMakeLists.txt  benchmark.cpp  game_of_life.hpp  game_of_life_v1.cpp  game_of_life_v2.cpp  game_of_life_v3.cpp  game_of_life_v4.cpp  readme.md  unit_tests.cpp  utils.cpp  utils.hpp
optimization/optimized_dailycode/: CMakeLists.txt  benchmark.cpp  day1.cpp  day1.hpp  day2.cpp  day2.hpp  day4.cpp  day4.hpp  readme.md
small_projects/slab_allocator/: allocator.cpp  allocator.hpp  unit_test.cpp
small_projects/thread_safe_mempool_allocator/: .gitignore  allocator.cpp  allocator.hpp  makefile  unit_test.cpp
small_projects/vwap_multithreaded_strategy/: .gitignore  CMakeLists.txt  benchmark.cpp  engine.cpp  engine.hpp  main.cpp  makefile  nano_benchmark.cpp  readme.md  state_buffer.cpp  state_buffer.h  state_buffer.hpp  worker.cpp  worker.hpp
snippets/: logn_insert_in_sorted_vector.cpp  priority_queue_with_lamda_cond.cpp
